# boreas

./: .gitignore  .mergify.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md
.circleci/: config.yml
.docker/: Dockerfile  build.Dockerfile  prod.Dockerfile
.github/: CODEOWNERS  install-dependencies.sh
.github/ISSUE_TEMPLATE/: bug-report.md
.github/actions/build-boreas-action/: action.yml
.github/actions/install-dependencies-action/: action.yml
.github/workflows/: build-docs.yml  ci-c.yml  codeql.yml  container.yml  push.yml  release-pontos.yml  release.yml  update-header.yml
changelog/: v22.4.0.md
cmake/: GetGit.cmake
doc/: CMakeLists.txt  Doxyfile.in  Doxyfile_full.in  Doxyfile_xml.in  boreas.8.in
src/: CMakeLists.txt  boreas.c  boreas_log_conf.cmake_in
